--- a/reader/public/css/layout.css
+++ b/reader/public/css/layout.css
@@ -7,8 +7,11 @@
     justify-content: center;
 }
 
-
 .table-controller-wrapper {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
+}
+
+.table-controller-wrapper-status {
+    display: flex;
 }
